first page nav + header

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,19 @@
 
+.icon{
+  width: 4em;
+  height: 4em;
+  background: url("../images/music_note.png");
+  background-size: 100%;
+}
+
+.gradient{
+  background: rgb(0,84,255);
+  background: linear-gradient(158deg, rgba(0,84,255,1) 0%, rgba(151,0,255,1) 100%);
+}
+
+.page-header {
+  font-size: 2em;
+  font-family: 'Montserrat', sans-serif;
+  color: white;
+  margin-top: 4em;
+}
