--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-
+/* 
 body {
   font-family: 'Montserrat', sans-serif;
   color: white;
@@ -44,4 +44,4 @@ body {
 .options
 {
   color: gray;
-}
+} */
