--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -2,32 +2,74 @@ $textColorWhite: #fff;
 $bckgColorHeader: #3BCEAC;
 $linkHeaderHover: #47FFD4;
 
+div{
+  position: relative;
+}
+// HEADER PAGE LINKS
 header{
- background: $bckgColorHeader;
- font-variant-caps: small-caps;
+  background: $bckgColorHeader;
+  height: 80vh;
 }
 
 .page-link {
- text-align: center;
- font-weight: bold;
- font-size: 20px;
- background: $bckgColorHeader;
- color: $textColorWhite;
- text-decoration: none;
- display: flex;
- flex-direction: horizontal;
- a {
-  text-decoration: none;
+  font-family: 'Montsserat', sans-serif;
+  font-weight: 800;
+  text-align: center;
+  background: $bckgColorHeader;
   color: $textColorWhite;
-  margin-top: 1em;
-  &:hover{
-   
-   color: $linkHeaderHover;
+  text-decoration: none;
+  display: flex;
+  border: 0;
+  flex-direction: horizontal;
+  a {
+    text-decoration: none;
+    color: $textColorWhite;
+    margin-top: 1em;
+    &:hover{
+    color: $linkHeaderHover;
   }
- }
- &:hover
- {
-  background-color: $bckgColorHeader;
- }
+  }
+  &:hover
+  {
+    background-color: $bckgColorHeader;
+  }
+}
+// HEADER CONTENT
+.header-content-left{
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 2px;
+  h1{
+      font-family: 'Oxygen', sans-serif;
+      font-weight: bold;
+      letter-spacing: 0px;
+  }
+
+  a{
+    color: $textColorWhite;
+    text-decoration: none;
+  }
 }
 
+
+
+.header-content-right{
+  .header-picture
+  {
+    height: 400px;
+    object-fit: cover;
+    box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.25);
+    border-radius: 343px; 
+  }  
+}
+
+.effect-canvas
+{
+  background: $textColorWhite;
+  height: 400px;
+  width: 60px;
+}
+
+.txtPresentation-picture {
+  font-size: 12px;
+  text-align: center;
+}
