--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,7 @@
 body {
   background: #3bceac;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 div {
@@ -106,6 +108,70 @@ header .container-fluid {
 
 .projects {
   background-color: #ee4266;
-  height: 80vh;
+  height: 60vh;
+}
+
+.projects-title {
+  margin-top: 1em;
+  font-family: "Montsserat", sans-serif;
+  font-weight: 400;
+  text-align: left;
+  color: #fff;
+  text-decoration: none;
+}
+
+.project-card {
+  letter-spacing: 1px;
+  background-color: #ffd23f;
+  height: 350px;
+  -webkit-box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.25);
+          box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.25);
+  margin-top: 2em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.project-card-title {
+  height: 20%;
+  padding: 1em;
+  color: #2f2f2f;
+  font-size: 14px;
+  font-family: "Roboto", sans-serif;
+}
+
+.project-card-body {
+  height: 60%;
+}
+
+.project-card-body img {
+  height: 100%;
+}
+
+.project-card-footer {
+  height: 20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.project-card-footer .btn {
+  font-family: "Montsserat", sans-serif;
+  font-weight: bold;
+  background-color: #540d6e;
+  color: #fff;
+  border-radius: 0;
+  margin: 1em;
 }
 /*# sourceMappingURL=styles.css.map */
