--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -3,6 +3,9 @@ $textColorYellow: #fff;
 $bckgColorHeader: #3bceac;
 $linkHeaderHover: #47ffd4;
 $bckgProjects: #ee4266;
+$colorYellow: #ffd23f;
+$colorPurple: #540d6e;
+$colorDark: #2f2f2f;
 
 @mixin whiteLink() {
   color: $textColorWhite;
@@ -11,6 +14,7 @@ $bckgProjects: #ee4266;
 
 body {
   background: $bckgColorHeader;
+  box-sizing: border-box;
 }
 
 div {
@@ -101,5 +105,56 @@ header .container-fluid {
 
 .projects {
   background-color: $bckgProjects;
-  height: 80vh;
+  height: 60vh;
+}
+
+// Projects session
+.projects-title {
+  margin-top: 1em;
+  font-family: "Montsserat", sans-serif;
+  font-weight: 400;
+  text-align: left;
+  color: $textColorWhite;
+  text-decoration: none;
+}
+
+.project-card {
+  letter-spacing: 1px;
+  background-color: $colorYellow;
+  height: 350px;
+  box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.25);
+  margin-top: 2em;
+  display: flex;
+  flex-direction: column;
+}
+
+.project-card-title {
+  height: 20%;
+  padding: 1em;
+  color: $colorDark;
+  font-size: 14px;
+  font-family: "Roboto", sans-serif;
+}
+
+.project-card-body {
+  height: 60%;
+  img {
+    height: 100%;
+  }
+}
+
+.project-card-footer {
+  height: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+
+  .btn {
+    font-family: "Montsserat", sans-serif;
+    font-weight: bold;
+    background-color: $colorPurple;
+    color: $textColorWhite;
+    border-radius: 0;
+    margin: 1em;
+  }
 }
