--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -108,7 +108,23 @@ header .container-fluid {
 
 .projects {
   background-color: #ee4266;
-  height: 60vh;
+  height: 55vh;
+}
+
+.slider {
+  display: block;
+  overflow-x: scroll;
+}
+
+.slider-container {
+  display: block;
+  white-space: nowrap;
+}
+
+.item {
+  background-color: #ffd23f;
+  display: inline-block;
+  margin-right: 4em;
 }
 
 .projects-title {
@@ -127,13 +143,6 @@ header .container-fluid {
   -webkit-box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.25);
           box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.25);
   margin-top: 2em;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
 }
 
 .project-card-title {
@@ -142,6 +151,7 @@ header .container-fluid {
   color: #2f2f2f;
   font-size: 14px;
   font-family: "Roboto", sans-serif;
+  white-space: normal;
 }
 
 .project-card-body {
@@ -173,5 +183,9 @@ header .container-fluid {
   color: #fff;
   border-radius: 0;
   margin: 1em;
+}
+
+.waveBottomProjects {
+  fill: #ee4266;
 }
 /*# sourceMappingURL=styles.css.map */
