--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -105,10 +105,26 @@ header .container-fluid {
 
 .projects {
   background-color: $bckgProjects;
-  height: 60vh;
+  height: 55vh;
 }
 
 // Projects session
+.slider {
+  display: block;
+  overflow-x: scroll;
+}
+
+.slider-container {
+  display: block;
+  white-space: nowrap;
+}
+
+.item {
+  background-color: $colorYellow;
+  display: inline-block;
+  margin-right: 4em;
+}
+
 .projects-title {
   margin-top: 1em;
   font-family: "Montsserat", sans-serif;
@@ -124,8 +140,6 @@ header .container-fluid {
   height: 350px;
   box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.25);
   margin-top: 2em;
-  display: flex;
-  flex-direction: column;
 }
 
 .project-card-title {
@@ -134,6 +148,7 @@ header .container-fluid {
   color: $colorDark;
   font-size: 14px;
   font-family: "Roboto", sans-serif;
+  white-space: normal;
 }
 
 .project-card-body {
@@ -157,4 +172,7 @@ header .container-fluid {
     border-radius: 0;
     margin: 1em;
   }
+}
+.waveBottomProjects {
+  fill: $bckgProjects;
 }
