--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -67,11 +67,15 @@ header .container-fluid {
 
 .header-content-right {
   letter-spacing: 2px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .header-content-right .header-picture {
-  z-index: 2;
-  height: 400px;
   -o-object-fit: cover;
      object-fit: cover;
   -webkit-box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.25);
@@ -92,7 +96,6 @@ header .container-fluid {
 
 .effect-canvas {
   position: absolute;
-  z-index: 1;
   width: 100px;
   height: 85%;
   margin-top: 1em;
