--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -75,9 +75,9 @@ header .container-fluid {
 
 .header-content-right {
   letter-spacing: 2px;
+  justify-content: center;
+  align-items: center;
   .header-picture {
-    z-index: 2;
-    height: 400px;
     object-fit: cover;
     box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.25);
     border-radius: 343px;
@@ -95,7 +95,6 @@ header .container-fluid {
 
 .effect-canvas {
   position: absolute;
-  z-index: 1;
   width: 100px;
   height: 85%;
   margin-top: 1em;
