--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -75,13 +75,11 @@ header .container-fluid {
 
 .header-content-right {
   letter-spacing: 2px;
-  justify-content: center;
-  align-items: center;
+
   .header-picture {
-    object-fit: cover;
+    // object-fit: cover;
     box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.25);
     border-radius: 343px;
-    margin-left: 120px;
   }
 
   a {
@@ -94,7 +92,7 @@ header .container-fluid {
 }
 
 .effect-canvas {
-  position: absolute;
+  // position: absolute;
   width: 100px;
   height: 85%;
   margin-top: 1em;
@@ -216,7 +214,6 @@ header .container-fluid {
 .about-content-right {
   font-family: "Roboto", sans-serif;
   letter-spacing: 2px;
-  background-repeat: no-repeat;
   color: $textColorWhite;
   a {
     @include yellowLink();
@@ -224,5 +221,10 @@ header .container-fluid {
     &:hover {
       color: $linkHeaderHover;
     }
+  }
+
+  .about-picture {
+    width: 100%;
+    box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.25);
   }
 }
