--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,7 +17,7 @@ header .container-fluid {
   font-family: "Montsserat", sans-serif;
   font-weight: 800;
   text-align: center;
-  background: #3bceac;
+  background: #00000000;
   color: #fff;
   text-decoration: none;
   display: -webkit-box;
@@ -240,5 +240,41 @@ header .container-fluid {
 .about-content-right .about-picture {
   -webkit-box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.25);
           box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.25);
+}
+
+.footer {
+  background-color: #2f2f2f;
+  color: #fff;
+}
+
+.footer h3 {
+  font-family: "Oxygen", sans-serif;
+  font-weight: bold;
+  font-size: 26px;
+  letter-spacing: 0px;
+}
+
+.footer p {
+  padding: 2rem;
+  padding-left: 0;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  letter-spacing: 2px;
+  color: #fff;
+}
+
+.footer a {
+  font-size: 14px;
+  color: #ffd23f;
+  text-decoration: none;
+  color: #ee4266;
+}
+
+.footer a:hover {
+  color: #47ffd4;
+}
+
+.waveTopFooter {
+  fill: #540d6e;
 }
 /*# sourceMappingURL=styles.css.map */
